2006-02-23  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/graphobject.h,
	interfaces/python/graphobject.c : added interface for igraph_rewire
	and igraph_write_graphml
	* examples/simple/igraph_rewire.c,
	examples/simple/igraph_rewire.out : added test case for igraph_rewire
	* src/foreign.c : added igraph_write_graphml, extended
	igraph_read_graphml to parse attribute data (but don't store it)
	* Makefile.am : separated documentation targets
	* src/error.c : added some debug statements
	* src/structural_properties.c : added igraph_rewire
	* examples/simple/test.gxl : replaced with a graph containing
	attributes
	* examples/simple/graphml.c : now tests igraph_write_graphml
	* examples/simple/graphml.out : adjusted to test.gxl output
	* src/topology.c : replaced class argument name to make it compile
	with g++ as well

2006-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_ncol) : added directed argument
	* interfaces/python/graphobject.c : updated

2006-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_merge_dla, igraph_i_layout_sphere_2d)
	(igraph_i_layout_sphere_3d, igraph_i_layout_merge_dla) : added
	* examples/simple/igraph_i_layout_sphere.c : added
	* examples/simple/igraph_layout_merge.c : added

	* src/vector.c (igraph_vector_order2) : added
	* examples/simple/vector.c: updated

	* src/igraph_grid.c (igraph_i_layout_mergegrid_which)
	(igraph_i_layout_mergegrid_init, igraph_i_layout_mergegrid_destroy)
	(igraph_i_layout_mergegrid_place_sphere)
	(igraph_i_layout_mergegrid_get, igraph_i_layout_mergegrid_get_sphere)
	: added
		
2006-02-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_write_graph_lgl) : error handling bug 
	hunted

2006-02-15  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* examples/simple/graphml.c, examples/simple/graphml.out,
	  examples/simple/test.gxl : added
	* src/foreign.c (igraph_read_graph_graphml) : added
	* src/igraph.h : header extended