@@ -1,1 +1,1 @@
-PKG_CFLAGS=-DUSING_R
+PKG_CFLAGS=-DUSING_R -I.
