@@ -659,6 +659,13 @@ igraph_progress_handler_t *
 igraph_set_progress_handler(igraph_progress_handler_t new_handler);
 
 /* -------------------------------------------------- */
+/* Graph operators                                    */
+/* -------------------------------------------------- */
+
+int igraph_union(igraph_t *res, igraph_t *left, igraph_t *right);
+int igraph_union_many(igraph_t *res, igraph_vector_ptr_t *graphs);
+
+/* -------------------------------------------------- */
 /* Dynamics measurement                               */
 /* -------------------------------------------------- */
 
