@@ -1,3 +1,8 @@
+2006-02-23  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/operators.R (igraph.union, "%u%") : added
+	* interfaces/R/src/rinterface.c (R_igraph_union) : added
+
 2006-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/foreign.R (read.graph.ncol) : updated
